<resources>
    <string name="app_name">TheMovieTest</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textButton">Tomar Foto</string>
    <string name="action_photos">Fotos</string>
    <string name="action_maps">Ubicación</string>
    <string name="action_movies">Peliculas</string>
    <string name="btn_txt_view">Ver fotos de firebase</string>
    <string name="action_location">obtener ubicación actual</string>
    <string name="action_view_map">Ver en el mapa</string>
    <string name="title_location">Obten tu ubicación para ver donde te encuentras</string>
</resources>