<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.themovietest.ui.MainActivity">
    <item
        android:id="@+id/movieFragment"
        android:orderInCategory="100"
        android:icon="@drawable/ic_movie"
        android:title="@string/action_movies"
        app:showAsAction="never" />
    <item
        android:id="@+id/locationUserFragment"
        android:orderInCategory="100"
        android:icon="@drawable/ic_map"
        android:title="@string/action_maps"
        app:showAsAction="never" />
    <item
        android:id="@+id/photoUserFragment"
        android:orderInCategory="100"
        android:icon="@drawable/ic_photo_camera"
        android:title="@string/action_photos"
        app:showAsAction="never" />
</menu>